hard-gists/977777/run.log
=== Docker Run Log for 977777 ===
Started at: Mi 29. Okt 18:32:25 CET 2025

[2025-10-29 18:32:26] START: Running container for 977777
[2025-10-29 18:32:26] SUCCESS: Container 3295db4a428eb529829b75eef899857380fd9c45fee06a27b3d8cc34ff5c2ba3 started for 977777
=== Container logs for 977777 ===
  File "/snippet.py", line 35
    print a.domainObjects
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 977777 ===
[2025-10-29 18:32:28] INFO: Container 3295db4a428eb529829b75eef899857380fd9c45fee06a27b3d8cc34ff5c2ba3 has stopped
